--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
-h2 {
+/* h2 {
     color: olive;
 }
 h3, h4 {
     color: goldenrod;
-}
+} */
 /* * {
     color: hotpink;
 } */
-.first
+/* .first
 {
     font-size: 24px;
     color: hotpink;
@@ -32,4 +32,19 @@ h1.space2 {
 }
 h1.space3#space33 {
     color: wheat;
+} */
+pre h1 {
+    color: aqua;
+}
+body > h3 {
+    color: blue;
+}
+a ~ div {
+    color: blueviolet;
+}
+h6 + p {
+    color: coral;
+}
+html > head + body h3 ~ h4 {
+    color: fuchsia;
 }
